# wasm-snowpack-demo

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  snowpack.config.js
public/: index.html
rust-crate/: Cargo.toml
rust-crate/src/: lib.rs
src/: index.js  lib.rs
web/: index.js
