[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["RomChung <thelns@vip.qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "*"
log = "0.4.0"
env_logger = "0.8.3"

[dependencies.web-sys]
versuib = "0.3.4"
features = [
  "Window",
  "Document",
  "Node",
  "Element",
  "HtmlElement",
]